# ai-agent-autoimprove

./: .gitignore  CODEX_SYNCTHING.md  POSTGRES.md  README.md  SYNCTHING.md  autoimprove_helpers.py  db.py  harvest.py  init_schema.py  justfile  logging_utils.py  main.py  pyproject.toml  refresh.py  reset_db.py  session_utils.py  setup_syncthing.py  summarize.py
config/: op-admin.envmap  op.envmap
reports/: 2026-04-21-legit-poker-e2e-slowness.md
skills/autoimprove/: SKILL.md
tests/: test_autoimprove_helpers.py  test_db.py  test_harvest.py  test_refresh.py  test_summarize.py
tests/fixtures/: claude_session.jsonl  codex_session.jsonl
